--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content skipped suite-Suite">
                       <span>
                         <img width="3%" src="skipped.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="org.tgf.regression.aim.TestCase_FMIR" hash-for-method="verify_FSEditability">verify_FSEditability</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="org.tgf.regression.aim.TestCase_FMIR" hash-for-method="verify_Legend">verify_Legend</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content skipped suite-Suite -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verify_FSEditability">
-                  </a> <!-- verify_FSEditability -->
-                  <span class="method-name">verify_FSEditability</span>
+                  <a name="verify_Legend">
+                  </a> <!-- verify_Legend -->
+                  <span class="method-name">verify_Legend</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -146,7 +146,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;org.tgf.regression.aim.TestCase_FMIR&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verify_FSEditability&quot;/&gt;
+          &lt;include name=&quot;verify_Legend&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- org.tgf.regression.aim.TestCase_FMIR --&gt;
     &lt;/classes&gt;
@@ -190,7 +190,7 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verify_FSEditability')
+data.setCell(0, 1, 'verify_Legend')
 data.setCell(0, 2, 'org.tgf.regression.aim.TestCase_FMIR')
 data.setCell(0, 3, 0);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
@@ -236,7 +236,7 @@ return data;
                 <br/>
                 <span class="ignored-method-name">verify_TotalDisbursement</span>
                 <br/>
-                <span class="ignored-method-name">verify_Legend</span>
+                <span class="ignored-method-name">verify_FSEditability</span>
                 <br/>
                 <span class="ignored-method-name">verify_Access2</span>
                 <br/>
@@ -266,8 +266,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">verify_FSEditability</span>
-                <span class="method-start">99 ms</span>
+                <span class="method-name">verify_Legend</span>
+                <span class="method-start">94 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
