--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -8,7 +8,7 @@
 <tr><td>org.tgf.regression.aim.TestCase_FMIR.verify_TotalPortfolioAmount</td></tr>
 <tr><td>org.tgf.regression.aim.TestCase_FMIR.verify_GeneralInstructions</td></tr>
 <tr><td>org.tgf.regression.aim.TestCase_FMIR.verify_TotalDisbursement</td></tr>
-<tr><td>org.tgf.regression.aim.TestCase_FMIR.verify_Legend</td></tr>
+<tr><td>org.tgf.regression.aim.TestCase_FMIR.verify_FSEditability</td></tr>
 <tr><td>org.tgf.regression.aim.TestCase_FMIR.verify_Access2</td></tr>
 <tr><td>org.tgf.regression.aim.TestCase_FMIR.verify_FS_Landing_Page</td></tr>
 <tr><td>org.tgf.regression.aim.TestCase_FMIR.verify_Access3</td></tr>
